# poPR

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
popr/: compare_in_browser.py  construct_base_url.py  construct_fork_label.py  extract_branches.py  prep_compare_base_url.py  reduce_to_potential_pr_heads.py  wait_for_api.py
tests/: get_pr_branches.py  test_get_diff_urls.py  test_popr.py  test_vipr.py
vipr/: __init__.py  construct_base_url.py  extract_branches.py  get_diff_urls.py  get_pr_branches.py
